tests/integration/snapshots/integration__conformance__n_array_number_and_several_commas.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[1,,]
stderr ---
error: expected json value, found `,`
 --> stdin:1:4
  |
1 | [1,,]
  |   -^
  |   |
  |   expected due to `,`
